<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu_menu"
        android:icon="@drawable/menubar"
    android:title="@string/menu_Biblioteca" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_add_home_24"
        android:title="@string/menu_inicio" />
    <item
        android:id="@+id/nav_bibliotec"
        android:icon="@drawable/bioteclaflaticon"
        android:title="@string/menu_Biblioteca" />
    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/progressss"
        android:title="@string/menu_progreso" />
    <item
        android:id="@+id/nav_perfi"
        android:icon="@drawable/profileeee"
        android:title="@string/menu_Perfil"
        />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/menu_CerrarS"
        />

</menu>